crates/fundle/tests/proc/bundle_tupled.rs
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.

#[fundle::bundle]
struct Foo(u8);

fn main() {}
